--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@directus/sdk": "^15.0.2",
     "apexcharts": "^3.45.2",
     "dropzone": "^6.0.0-beta.2",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "nouislider": "^15.7.1",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
