--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@directus/sdk": "^15.0.2",
     "apexcharts": "^3.45.2",
+    "axios": "^1.6.7",
     "dropzone": "^6.0.0-beta.2",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
